findDominantLong update